<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="main_activity_display_message">GameUp</string>
    <string name="display_activity_display_message">Join Game</string>
    <string name="create_activity_display_message">Create Game</string>
    <string name="login_activity_display_message">Login</string>
    <string name="settings_activity_display_message">Settings</string>
    <string name="app_name">GameUp</string>
    <string name="fb_app_id" translatable="false">388247841278612</string>
    <string name="map_api_key" translatable="false">AIzaSyB_Hh3iDwK7kgxnmZpHMD27wlXxRvpXBBE</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_filter_sport">By sport</string>
    <string name="menu_filter_location">By location</string>
    <string name="menu_filter_distance">By distance from me</string>
    <string name="menu_filter_time">By time</string>
    <string name="menu_filter_ability">By ability level</string>
    <string name="menu_filter_all">All filters</string>
    <string name="menu_filter_clear">Clear all filters</string>
    <string name="new_game">New Game</string>
    <string name="sign_up">Sign Up / Login</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="join">Join Game</string>
    <string name="unjoin">Unjoin Game</string>
    <string name="create">Create Game</string>
    <string name="unlink">Unlink From Facebook</string>
    <string name="unlink_short">Unlink</string>
    <string name="add_new">Add New</string>
    <string name="players_joined">Players Joined:</string>
    <string name="ability_level">Ability Level:</string>
    <string name="alert_success_join">Congrats! \n You successfully joined the game!</string>
    <string name="alert_success_unjoin">Congrats! \n You successfully unjoined the game!</string>
    <string name="alert_success_create">Congrats! \n You successfully created a game!</string>
    <string name="alert_fail_join">Sorry. \n This game is full. Please try a different game.</string>
    <string name="alert_fail_unjoin">Sorry. \n You can\'t to unjoin the game at this time.</string>
    <string name="alert_fail_create">Sorry. \n You can\'t create a game at this time.</string>
    <string name="access_sport_icon">Sport icon for game</string>
    <string name="access_sport_joined">You have joined that game icon</string>
    <string name="access_success">Success icon</string>
    <string name="access_failure">Failure icon</string>
    <string name="access_facebook">Facebook login</string>
    <string name="access_no_game_help">No games are present. Try clearing any filters or creating a new game.</string>
    <string name="choose_sport_prompt">Sport:</string>
    <string name="choose_location_prompt">Venue:</string>
    <string name="choose_players_prompt">Number of Players:</string>
    <string name="choose_start_time_prompt">Start time:</string>
    <string name="choose_end_time_prompt">End time:</string>
    <string name="choose_ability_prompt">Ability Level:</string>
    <string name="venue_name_hint">Save this venue as&#8230;</string>
    <string name="venue_addr_hint">Location (e.g. Parents Field or address)</string>
    <string name="filter_title">Filter by:</string>
    <string name="filter_sport_none">None</string>
    <string name="filter_sport_prompt">Choose a sport to filter on:</string>
    <string name="filter_ability_prompt">Choose an ability level to filter on:</string>
    <string name="filter_distance_prompt">Choose distance to filter on:</string>
    <string name="filter_sport_prompt_short">Sport:</string>
    <string name="filter_ability_prompt_short">Ability level:</string>
    <string name="filter_distance_prompt_short">Distance:</string>
    <string name="sport_hint">Start typing to find sports</string>
    <string name="clear_button">Clear the current text</string>
    
    <string name="unlink_prompt">Unlinking your account from Facebook will permanently delete all of your information from GameUp.</string>

    <string name="location_error_message">We cannot find that location. Make sure your search is spelled correctly. Try adding a city, state, or zip code.</string>
    <string name="play_services_error_message_add_new">Google Play Services does not exist on your device. You cannot add new locations.</string>
    <string name="create_error_message_player_count">You must select the number of players to create a game.</string>
    <string name="create_error_message_sport">You must select a sport to create a game.</string>
    <string name="create_error_message_sport_valid">You sport you entered is not valid or does not exist. Check your spelling or try a different sport.</string>
    <string name="create_error_message_venue">You must select a venue to create a game.</string>
    <string name="create_error_message_time">The start time must be before the end time.</string>
    <string name="create_error_message_server">There is a problem saving your game. Please try again.</string>
    
    <color name="nice_blue">#33b5e5</color>
    <color name="nice_blue_dark">#0099cc</color>
    <color name="transparent">#00000000</color>

</resources>