<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- Dummy item to prevent any component from receiving focus -->

    <LinearLayout
        android:id="@+id/dummy"
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/text_filter_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:text="@string/filter_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_blue_light" />

    <TextView
        android:id="@+id/text_sport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:text="@string/filter_sport_prompt_short"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <AutoCompleteTextView
            android:id="@+id/sport_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:completionThreshold="1"
            android:hint="@string/filter_sport_none"
            android:inputType="textAutoComplete|textAutoCorrect"
            tools:listitem="@android:layout/simple_spinner_item" />

        <ImageButton
            android:id="@+id/sport_dropdown_clear"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/clear_button"
            android:background="@drawable/clear" />
    </FrameLayout>

    <TextView
        android:id="@+id/text_ability"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:text="@string/filter_ability_prompt_short"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/ability_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        tools:listitem="@android:layout/simple_spinner_item" />

    <TextView
        android:id="@+id/text_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:text="@string/filter_distance_prompt_short"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="gone" />

    <EditText
        android:id="@+id/edittext_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:textSize="18sp"
        android:visibility="gone" />

</LinearLayout>