<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DisplayGameActivity" >

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/gameSport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="30sp" >
            </TextView>

            <TextView
                android:id="@+id/gameLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/gameTimestamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp" >
            </TextView>

            <TextView
                android:id="@+id/gameDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gameMapView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical" >

        <fragment
            android:id="@+id/gameMap"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/gamePlayersJoined"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:layout_marginRight="10dp"
	            android:gravity="center"
	            android:text="@string/players_joined"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:textSize="20sp" >
	        </TextView>
	
	        <TextView
	            android:id="@+id/gamePlayers"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:gravity="center"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:textSize="20sp" >
	        </TextView>
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/gameAbilityLevelText"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:layout_marginRight="10dp"
	            android:gravity="center"
	            android:text="@string/ability_level"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:textSize="20sp" >
	        </TextView>
	
	        <TextView
	            android:id="@+id/gameAbilityLevel"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:gravity="center"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:textSize="20sp" >
	        </TextView>
	    </LinearLayout>
	</LinearLayout>

    <Button
        android:id="@+id/joinButton"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/join" />

</LinearLayout>